[options]
install_requires =
    pandas<1.5.3
    pyarrow<11

[options.entry_points]
console_scripts =
    parquet2csv = parquet2csv.cli:main

[metadata]
name = parquet2csv
version = 0.8
description = No judgment, but I looked this up on StackOverflow twice and decided not to have to look it up the third time
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chris.partridge.tech/
author = Chris Partridge
author_email = tweedge-public@partridge.tech
license = Apache License 2.0
classifiers = 
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Source = https://github.com/tweedge/parquet2csv